TMZ-281 fix image alignment for flex hero showcase

--- a/modules/content/assets/scss/hello-plus-flex-hero.scss
+++ b/modules/content/assets/scss/hello-plus-flex-hero.scss
@@ -242,6 +242,10 @@
 			& .ehp-flex-hero__content-container {
 				justify-content: var(--flex-hero-content-alignment-showcase);
 			}
+
+			& .ehp-flex-hero__image {
+				align-items: var(--flex-hero-content-alignment-showcase);
+			}
 		}
 
 		&-storytelling {
